--- a/examples/systeminfo/Makefile
+++ b/examples/systeminfo/Makefile
@@ -1,15 +1,17 @@
-LAMMPS=lmp_serial
+LAMMPS = lmp_serial
+CXX = g++
+CXXFLAGS = -I../../include
 
 all: a.out
 
 a.out: systeminfo.cpp
-	g++ systeminfo.cpp
+	$(CXX) $(CXXFLAGS) systeminfo.cpp -o a.out
 
 run: a.out simple.lammpstrj 
 	./a.out
 
 simple.lammpstrj:
-	lmp_serial < simple.input
+	$(LAMMPS) < simple.input
 
 .PHONY: clean
 
